# uClinux

./: .config  .gitignore  .gitmodules  Makefile  README  SOURCE
lib/libatm/: ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  acconfig.h  aclocal.m4  config.cache  config.h  config.h.in  config.status  config.sub  configure  configure.in  libtool
lib/libatm/doc/: Makefile  Makefile.in
lib/libatm/m4/: Makefile  Makefile.in
lib/libatm/src/: Makefile  Makefile.am  Makefile.in
lib/libidn/: AUTHORS  ChangeLog  FAQ  Makefile.am  Makefile.in  NEWS  README  README-alpha  THANKS  TODO  aclocal.m4  config.h.in  config.sub  configure  configure.ac  libidn.pc.in  makefile
lib/libidn/contrib/: README
lib/libidn/doc/: Makefile.am  Makefile.gdoc  Makefile.gdoci  Makefile.in  components.eps  idn.1  lgpl.texi  libidn.html  libidn.info  libidn.ps  libidn.texi  version.texi
lib/libidn/examples/: Makefile.am  Makefile.in  example.c  example2.c  example3.c  example4.c  example5.c
lib/libidn/java/: Makefile.am  Makefile.in
lib/libidn/lib/: Makefile.am  Makefile.in  gen-stringprep-tables.pl  gen-tld-tables.pl  idn-free.c  idn-free.h  idna.c  idna.h  nfkc.c  pr29.c  pr29.h  profiles.c  punycode.h  stringprep.c  stringprep.h  stringprep.h.in  tld.c  tld.h  toutf8.c  version.c
lib/libidn/libc/: example.c
lib/libidn/m4/: ax_create_stdint_h.m4
lib/libidn/po/: LINGUAS  POTFILES.in  da.gmo  da.po  de.gmo  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  eo.gmo  eo.po  fr.gmo  fr.po  libidn.pot  nl.gmo  nl.po  pl.gmo  pl.po  ro.gmo  ro.po  sr.gmo  sr.po  sv.gmo  sv.po
lib/libidn/src/: Makefile.am  Makefile.in  idn.c  idn.ggo  idn_cmd.c  idn_cmd.h  idna.el  punycode.el
lib/libidn/tests/: Makefile.am  Makefile.in  tst_idna.c  tst_idna2.c  tst_nfkc.c  tst_pr29.c  tst_punycode.c  tst_stringprep.c  tst_tld.c  utils.c  utils.h
lib/libnetfilter_conntrack/: Make_global.am  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in  libnetfilter_conntrack.pc.in  makefile
lib/libnetfilter_conntrack/extensions/: Makefile.am  Makefile.in  (+4 more)
lib/libnetfilter_log/: Makefile.am  Makefile.in  configure  configure.in  libnetfilter_log.pc.in  makefile
lib/libnfnetlink/: Makefile.in  aclocal.m4  configure  configure.in  libnfnetlink.pc.in  makefile
lib/libopenh323/: ChangeLog  Makefile.in  OpenH323.dsw  OpenH323.sln  OpenH323Lib.dsp  OpenH323Lib.vcproj  OpenH323dll.dsp  OpenH323dll.vcproj  Openh323libce.vcp  ReadMe.txt  VoIPBlaster.txt  configure  configure.ac  makefile  openh323_cfg.dxy  openh323lib.vcp  openh323u.mak.in  version.h
lib/osip2/: AUTHORS  ChangeLog  FEATURES  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  libosip2.pc.in  makefile
lib/osip2/debian/: docs  (+13 more)
user/asterisk-addons/: ChangeLog  Makefile  README  app_addon_sql_mysql.c  app_saycountpl.c  bootstrap.sh  cdr_addon_mysql.c  configure  configure.ac  makefile  makeopts.in  menuselect-tree  mysql_config  res_config_mysql.c
user/at/: ChangeLog  Copyright  Filelist  Filelist.asc  Makefile  Makefile.in  Problems  README  acconfig.h  at.1  at.1.in  at.c  at.deny  at.h  atd.8  atd.8.in  atd.c  atrun  atrun.8  atrun.8.in  atrun.in  batch  batch.in  config.cache  config.guess  config.h  config.h.in  config.status  configure  configure.in  daemon.c  daemon.h  getloadavg.c  lex.yy.c  panic.c  panic.h  parsetime.h  parsetime.l  parsetime.y  perm.c  (+5 more)
user/clamsmtp/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  acsite.m4  config.guess  config.h.in  config.sub  configure  configure.in  makefile
user/conntrack-tools/: ChangeLog  INSTALL  Make_global.am  Makefile.am  Makefile.in  TODO  aclocal.m4  configure  configure.in  conntrack.8  makefile
user/ctorrent/: Makefile.am  Makefile.in  NEWS  README  btconfig.cpp  btconfig.h  btcontent.cpp  btfiles.cpp  btfiles.h  config.h.in  configure  configure.in  ctorrent.cpp  downloader.cpp  httpencode.h  makefile  peer.cpp  peer.h  peerlist.cpp  tracker.cpp
user/dhcpcd-new/: ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  arp.c  buildmsg.c  buildmsg.h  client.c  client.h  confdefs.h  config.sub  configure  configure.in  dhcpcd-1.3.20.lsm  dhcpcd.8  dhcpcd.c  dhcpcd.h  dhcpcd.spec  dhcpcd.spec.in  pathnames.h  peekfd.c  signals.c  signals.h  udpipgen.h
user/ethtool/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  amd8111e.c  configure  configure.ac  de2104x.c  e100.c  e1000.c  ethtool-config.h.in  ethtool-copy.h  ethtool-util.h  ethtool.8  ethtool.c  ethtool.spec  ethtool.spec.in  fec_8xx.c  ibm_emac.c  natsemi.c  pcnet32.c  realtek.c  skge.c  tg3.c
user/frox/: BUGS  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap  cacheconv.pl  config.sub  configure  configure.in  makefile
user/ftpd/: ChangeLog  Makefile  Makefile.am  Makefile.in  auth.c  conf.c  config.h  confpaths.h  crypt.h  extern.h  ftpcmd.c  ftpcmd.y  ftpd.8  ftpd.c  localhost.c  logwtmp.c  pam.c  popen.c  server_mode.c  xgetcwd.c  xmalloc.c
user/ip-sentinel/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  config.h.in  config.sub  configure  configure.ac  disttest  disttest-data  ip-sentinel.spec  ip-sentinel.spec.in  makefile
user/jamvm/: INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  makefile
user/kexec-tools/: AUTHORS  Makefile.in  configure  configure.ac  kexec-tools.spec  kexec-tools.spec.in  makefile
user/lirc/: ANNOUNCE  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  config.h  config.h.in  config.sub  configure  configure.in  setup.sh
user/mawk/: .cvsignore  CHANGES  INSTALL  Makefile  Makefile.in  array.c  array.w  bi_funct.c  bi_funct.h  bi_vars.c  bi_vars.h  cast.c  code.c  code.h  config.cache  config.h  config.status  configure  configure.in  da.c  error.c  execute.c  fcall.c  field.c  field.h  files.c  files.h  fin.c  fpe_check.c  hash.c  init.c  jmp.c  kw.c  main.c  makescan.c  matherr.c  mawk.ac.m4  mawk.h  memory.c  memory.h  (+18 more)
(+29828 files in other folders)
